# shadowlight-engine

./: .gitignore  README.md  meson.build
include/: Asset.hpp  AssetHandle.hpp  AssetPool.hpp  Assets.hpp  BulletBinding.hpp  Component.hpp  ComponentScript.hpp  Entity.hpp  LuaBinding.hpp  OpenALBinding.hpp  Scene.hpp  ScriptAsset.hpp  ScriptComponent.hpp  ShadowlightEngine.hpp  VulkanBinding.hpp
src/: AssetHandle.cpp  AssetPool.cpp  BulletBinding.cpp  ComponentScript.cpp  Entity.cpp  LuaBinding.cpp  OpenALBinding.cpp  Scene.cpp  Scene.hpp  ScriptComponent.cpp  ShadowlightEngine.cpp  ShadowlightEngine.hpp  VulkanBinding.cpp  main.cpp
src/assets/: Asset.cpp  Asset.hpp  AssetHandle.cpp  AssetHandle.hpp  AssetPool.cpp  AssetPool.hpp  AudioAsset.cpp  AudioAsset.hpp  EnvironmentMapAsset.cpp  EnvironmentMapAsset.hpp  MaterialAsset.cpp  MaterialAsset.hpp  MeshAsset.cpp  MeshAsset.hpp  ScriptAsset.cpp  ScriptAsset.hpp  ShapeAsset.cpp  ShapeAsset.hpp  TextureAsset.cpp  TextureAsset.hpp
src/bindings/: Binding.hpp  BulletBinding.cpp  BulletBinding.hpp  LuaBinding.cpp  LuaBinding.hpp  OpenALBinding.cpp  OpenALBinding.hpp  VulkanBinding.cpp  VulkanBinding.hpp
src/bindings/bullet/: BulletInstance.cpp  BulletInstance.hpp
src/bindings/vk/: GBuffer.cpp  GBuffer.hpp  RenderAttachment.cpp  RenderAttachment.hpp  VulkanInstance.cpp  VulkanInstance.hpp
src/components/: AudioSourceComponent.cpp  AudioSourceComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  Component.hpp  FirstPersonControllerComponent.cpp  FirstPersonControllerComponent.hpp  MeshRendererComponent.cpp  MeshRendererComponent.hpp  PointLightComponent.cpp  PointLightComponent.hpp  RendererComponent.hpp  RigidBodyComponent.cpp  RigidBodyComponent.hpp  SceneComponent.cpp  SceneComponent.hpp  ScriptComponent.cpp  ScriptComponent.hpp  SkyboxComponent.cpp  SkyboxComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
src/config/: Config.cpp  Config.hpp  EngineConfig.cpp  EngineConfig.hpp  EnvironmentMapConfig.cpp  EnvironmentMapConfig.hpp  PointLightConfig.cpp  PointLightConfig.hpp  RigidBodyConfig.cpp  RigidBodyConfig.hpp  ShapeConfig.cpp  ShapeConfig.hpp  TransformConfig.cpp  TransformConfig.hpp
src/global/: Entity.cpp  Entity.hpp  Filesystem.cpp  Filesystem.hpp  Geometry.cpp  Geometry.hpp  Log.cpp  Log.hpp  Scene.cpp  Scene.hpp  ShaderModule.cpp  ShaderModule.hpp  ShadowlightEngine.cpp  ShadowlightEngine.hpp  Window.cpp  Window.hpp  main.cpp
src/input/: InputAxis.hpp  KeyboardAxis.cpp  KeyboardAxis.hpp  MouseAxis.cpp  MouseAxis.hpp
src/pipelines/: AmbientLightPipeline.cpp  AmbientLightPipeline.hpp  CompositePipeline.cpp  CompositePipeline.hpp  EnvironmentMapPipeline.cpp  EnvironmentMapPipeline.hpp  MeshFeedForwardPipeline.cpp  MeshFeedForwardPipeline.hpp  MeshPipeline.cpp  MeshPipeline.hpp  Pipeline.hpp  PointLightPipeline.cpp  PointLightPipeline.hpp
src/shaders/: AmbientLightShader.cpp  AmbientLightShader.hpp  CompositeShader.cpp  CompositeShader.hpp  MaterialShader.cpp  MaterialShader.hpp  PointLightShader.cpp  PointLightShader.hpp  ShaderModule.cpp  ShaderModule.hpp  SkyboxShader.cpp  SkyboxShader.hpp
